<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:enabled="true"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_callLog"
        android:icon="@drawable/ic_call_black_24dp"
        android:enabled="true"
        android:title="@string/title_callLog" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:enabled="true"
        android:visible="false"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:enabled="true"
        android:title="@string/title_settings" />

</menu>
