<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="ceid.katefidis.calchas.ConsentActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/welcomeText"
                android:textColor="?attr/colorText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consentMsg"
                android:textColor="?attr/colorText" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="?attr/colorText"
                android:checked="false"
                android:text="@string/networkText"
                android:textColor="?attr/colorText" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:buttonTint="?attr/colorTextLight"
                android:checked="false"
                android:text="@string/netenableText"
                android:textColor="?attr/colorTextLight" />

            <Button
                android:id="@+id/cons_button_ok"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="?attr/colorPrimary"
                android:padding="10dp"
                android:text="@string/start_calchas"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorText"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
